[package]
name = "fuzz"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loro-unknown = { path = "../loro-unknown", package = "loro-unknown" }
loro-internal = { path = "../loro-internal", features = [
    "test_utils",
], package = "loro-internal-unknown" }
arbitrary = "1"
tabled = "0.10"
debug-log = { workspace = true }
fxhash = { workspace = true }
enum_dispatch = { workspace = true }
enum-as-inner = { workspace = true }

[dev-dependencies]
arbtest = "^0.2.0"
